--- a/Frontends/FreeCourse.Web/Views/Courses/Index.cshtml
+++ b/Frontends/FreeCourse.Web/Views/Courses/Index.cshtml
@@ -19,7 +19,7 @@
                                 <th>Kurs Ismi</th>
                                 <th>Fiyat</th>
                                 <th>Süre</th>
-                                <th>Kategori İsmi</th>
+                                <th>Kategori Ismi</th>
                                 <th>İşlemler</th>
                             </tr>
                         </thead>
@@ -27,11 +27,12 @@
                             @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td></td>
+                                    <td><img style="width:72px" src="@item.StockPictureUrl" class="img-thumbnail "/></td>
                                     <td>@item.Name</td>
                                     <td>@item.Price</td>
                                     <td>@item.Feature.Duration</td>
                                     <td>@item.Category.Name</td>
+                                    
 
                                     <td>
                                         <a asp-controller="Courses" asp-action="Update" asp-route-id="@item.Id" class="btn btn-success">Güncelle</a>
