--- a/Frontends/FreeCourse.Web/Views/Basket/Index.cshtml
+++ b/Frontends/FreeCourse.Web/Views/Basket/Index.cshtml
@@ -82,6 +82,7 @@
                 else
                 {
                     <div class="alert alert-info">Sepet boş</div>
+                    <a class="btn btn-warning" asp-controller="Home" asp-action="Index">Ana Sayfaya Dön</a>
                 }
             </div>
         </div>
