--- a/Frontends/FreeCourse.Web/Views/Order/SuccessfulCheckout.cshtml
+++ b/Frontends/FreeCourse.Web/Views/Order/SuccessfulCheckout.cshtml
@@ -1,11 +1,10 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "SuccessfulCheckout";
 }
 
 <div class="alert alert-info">
-    <p>Sipariş(ödeme) Başarıyla Tamamlandı</p>
-    <p>Sipariş(ödeme) No: @ViewBag.orderId</p>
-</div>
-<a class="btn btn-primary" asp-controller="Home" asp-action="Index">AnaSayfa</a>
 
+    <p>Sipariş(ödeme) başarıyla tamamlandı</p>
+    <p>Sipariş(ödeme) no : @ViewBag.orderId</p>
+</div>
+<a class="btn btn-primary" asp-controller="Home" asp-action="Index">Anasayfa</a>
