--- a/Frontends/FreeCourse.Web/Views/Shared/_Layout.cshtml
+++ b/Frontends/FreeCourse.Web/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" asp-controller="User" asp-action="Index">Profil</a></li>
                           <li><a class="dropdown-item" asp-controller="Basket" asp-action="Index">Sepet</a></li>
-                           <li><a class="dropdown-item" asp-controller="Order" asp-action="Index">Sipariş</a></li>
+                           <li><a class="dropdown-item" asp-controller="Order" asp-action="CheckoutHistory">Sipariş</a></li>
                             <li><a class="dropdown-item" asp-controller="Auth" asp-action="LogOut" style="background-color:red">Çıkış Yap</a></li>
                         </ul>
                     </li>
